# moldova-flood-risk

./: .gitignore  .vercelignore  CLAUDE.md  DEVELOPMENT.md  PORTING.md  README.md  RISK_ASSESSMENT_PLAN.md  data-contract.md  package.json  vercel.json
.serena/: project.yml
app/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/public/: diagnose.html
app/public/data/: admin.geojson  eal.json  sample_portfolio.csv  summary.json
app/src/: App.tsx  config.ts  index.css  main.tsx
app/src/components/: AdminPanel.tsx  AdminSelector.tsx  BasemapToggle.tsx  BecomesPanel.tsx  DataSources.tsx  EalPanel.tsx  FieldPanel.tsx  Geocoder.tsx  HeadlineStat.tsx  LanguageToggle.tsx  LayerControls.tsx  Legend.tsx  OnboardingTutorial.tsx  PortfolioPanel.tsx  ProvenanceChip.tsx  RPSelector.tsx  ThemeToggle.tsx
app/src/data/: floodRamp.ts
app/src/lib/: data.ts  geo.ts  i18n.ts  onboarding.ts  types.ts  utils.ts
app/src/map/: jrc.ts  (+4 more)
design-reference/: Design Language - Moldova Flood Risk.html  colors_and_type.css
i18n/: en.json  ro.json
precompute/: Makefile  README.md  config.yaml  pyproject.toml
precompute/src/moldova_precompute/: __init__.py  build_admin.py  build_eal.py  build_fields_tiles.py  build_flood_cogs.py  build_summary.py  const.py  export_report_data.py  extract_fields.py  fetch_jrc.py  jrc_tiles.py  zonal_stats.py
report/: _quarto.yml  moldova-flood-risk.qmd  styles.css
report/_site/: moldova-flood-risk.html
report/data/: admin_stats.json  admin_table.json  summary.json  top_fields.json  variables.yml
(+6 files in other folders)
